--- a/home.html
+++ b/home.html
@@ -29,6 +29,8 @@
       <!-- <p>Value To Pass to API: <input id="apivalue" type="text" name="value"></p> -->
       <h6>Seat Select</h6>
       <button id='fillForm' class="btn btn-primary">Select</button>
+      <h6>Continue </h6>
+      <button id='fillFormConti' class="btn btn-primary">Continue</button>
 
       <h6>Info & Pay</h6>
       <button id='fillFormPer' class="btn btn-primary">Pay</button>
