--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h6>Seat Select Biman</h6>
       <button id='fillForm' class="btn btn-primary">Select All</button>
       <h6>Only View Seat</h6>
-      <button id='viewSeats' class="btn btn-primary">View Seats</button>
+      <button id='viewseat' class="btn btn-primary">View Seats</button>
       <h6>Only Select Seat</h6>
       <button id='selectSeats' class="btn btn-primary">Select Seats</button>
       <!-- <h6>Seat Select Dhaka</h6> -->
