--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     
       <!-- <p>Value To Pass to API: <input id="apivalue" type="text" name="value"></p> -->
       <h6>Seat Select Biman</h6>
+      <button id='cabinviewseat' class="btn btn-primary">Cabin</button>
+      <h6>Seat Select Biman</h6>
       <button id='fillForm' class="btn btn-primary">Select All</button>
       <h6>Only View Seat</h6>
       <button id='viewseat' class="btn btn-primary">View Seats</button>
